src/parser/snapshots/rbx_rsml__parser__tests__priority_missing_semicolon.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Priority {
        declaration: Node {
            token: SpannedToken(
                0,
                PriorityDeclaration,
                9,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        10,
                        Number(
                            "10",
                        ),
                        12,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: None,
    },
]
