src/parser/snapshots/rbx_rsml__parser__tests__query_selector.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            QuerySelector(
                                "media",
                            ),
                            6,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        7,
                        ScopeOpen,
                        8,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            9,
                            ScopeClose,
                            10,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
