src/parser/snapshots/rbx_rsml__parser__tests__rule_comma_selectors.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            5,
                            Comma,
                            6,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            7,
                            Identifier(
                                "TextLabel",
                            ),
                            16,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        17,
                        ScopeOpen,
                        18,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            19,
                            ScopeClose,
                            20,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
