src/parser/snapshots/rbx_rsml__parser__tests__rule_comma_three.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                Token(
                    Node {
                        token: SpannedToken(
                            0,
                            Identifier(
                                "Frame",
                            ),
                            5,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            5,
                            Comma,
                            6,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            7,
                            Identifier(
                                "TextLabel",
                            ),
                            16,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            16,
                            Comma,
                            17,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            18,
                            Identifier(
                                "ImageLabel",
                            ),
                            28,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        29,
                        ScopeOpen,
                        30,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            31,
                            ScopeClose,
                            32,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
